[package]
name = "handlebars-fluent"
version = "0.2.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"
description = "Handlebars helpers for the Fluent internationalization framework"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/handlebars-fluent/"
repository = "https://github.com/manishearth/handlebars-fluent"
keywords = ["handlebars", "fluent", "internationalization", "localization"]
categories = ["internationalization", "localization", "template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true

[dependencies]
handlebars = { version = "2", optional = true }
lazy_static = "1.2.0"
fluent = "0.5"
fluent-bundle = "0.6.0"
fluent-syntax = "0.9.0"
fluent-locale = "0.4.1"
serde_json = "1.0"
tera = { version = "1.0.2", optional = true }
snafu = "0.6.2"

[dev-dependencies]
tempfile = "3.1.0"
