[package]
name = "fluent-template-helper"
version = "0.2.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"
description = "Template engine helpers for the Fluent internationalization framework"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fluent-template-helper/"
repository = "https://github.com/manishearth/fluent-template-helper"
keywords = ["handlebars", "fluent", "internationalization", "localization", "tera"]
categories = ["internationalization", "localization", "template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true

[dependencies]
handlebars = { version = "2", optional = true }
lazy_static = "1.2.0"
fluent = "0.5"
fluent-bundle = "0.6.0"
fluent-syntax = "0.9.0"
fluent-locale = "0.4.1"
serde_json = "1.0"
tera = { version = "1.0.2", optional = true }
snafu = "0.6.2"

[dev-dependencies]
tempfile = "3.1.0"
