[package]
name = "handlebars-fluent"
version = "0.3.2"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"
rust-version = "1.73.0"
description = "Handlebars helpers for the Fluent internationalization framework"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/handlebars-fluent/"
repository = "https://github.com/manishearth/handlebars-fluent"
keywords = ["handlebars", "fluent", "internationalization", "localization"]
categories = ["internationalization", "localization", "template-engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "6.3"
lazy_static = "1.5"
fluent = "0.16"
fluent-bundle = "0.16"
fluent-syntax = "0.12"
fluent-langneg = "0.13"
serde_json = "1.0"
unic-langid = { version = "0.9", features = ["macros"] }

[dev-dependencies]
tempfile = "3.3"
